--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 </head>
 <body>
-    <p>Md. Mehedi Hasan</p>
-    <a href="Mehedi"></a>
+        <h1>Hello, I'M</h1> 
+        <h1 style="color: blue;">Mehedi Hasan</h1>
+        <h3>About Me</h3>
+        <p>Hi, I am Mehedi. I'm studying BSc in CSE at Daffodil International University. 
+            Now, I'm a front-end Junior Web Developer.I'm a good team member in teamwork.<br>
+            I love my work and always try to think something different. If you want to build 
+            a website for personal or business purpose, I'm ready to assist you.</p>
+
+        <a target="_blank" href="https://sites.google.com/diu.edu.bd/mehedi27-/home?authuser=0">My Google Site</a>
+
+      
+       <br><img src="images/pic.jpg" height="325" width="350" alt="">
+       
+
+            <h1 style="color: tomato;">My Dream</h1>
+            <h2>Become Full Stack Web Developer </h2>
+            <p>I already learned the basic HTML, CSS & javaScript. I can build any simple website. 
+            I can even teach my grandma how to make simple website. 
+            <br>My goal is to build 5 full websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" 
+            href="https://sites.google.com/diu.edu.bd/mehedi27-/resume?authuser=0">Vist My Resume </a>
+
+            <h2 style="color: indigo;">Latest Working Small Projects</h2>
+            <ul>
+                <li>Booking Flights- html, css</li>
+                <li>Penguin Fashion- html,css</li>
+                <li>Issue Tracker- html, javaScript</li>
+                <li>Food Court- html, css, javaScript</li>
+            </ul>
+
+
 </body>
 </html>
